# vega

./: .coveragerc  .pyup.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  input.txt  requirements-mpi.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
cobaya_interface/: info_full-As_lya.yaml  info_full-As_lya_minimize.yaml  info_full.yaml  info_full_future.yaml  info_full_joint_minimize.yaml  info_joint_test.yaml  info_lya_test.yaml  info_minimize.yaml  info_nuisance_As_omegam_joint_minimize.yaml  info_nuisance_joint_minimize.yaml  info_sample.yaml  info_sample2.yaml  info_sample3.yaml  info_sample4.yaml  info_sample5.yaml  likelihood.ipynb  likelihood.py  likelihood_SH.py  main.ini  plot_chains.ipynb
docs/: Analysis.rst  Build_Config.rst  Data.rst  Makefile  Model.rst  Plots.rst  Sampler.rst  conf.py  config.rst  index.rst  install.rst  installation.rst  intro.rst  make.bat  usage.rst  vega.rst
examples/: .gitignore  FitResultsTutorial.ipynb  Plots_tutorial.ipynb  README  README.rst  Sensitivity_tutorial.ipynb  SimpleModelTutorial.ipynb  VegaPlots.ipynb  VegaPlots2Datasets.ipynb  Vega_tutorial.ipynb  config_creation.ipynb  lyaxlya.ini  main-compression.ini  main.ini  qsoxlya.ini
lyafit/: __init__.py  analysis.py  cli.py  correlation_func.py  correlation_item.py  data.py  lyafit.py  minimizer.py  model.py  new_data.py  new_model.py  new_pk.py  new_utils.py  new_xi.py  output.py  parser.py  pk.py  power_spectrum.py  sampler.py  sampler_interface.py  utils.py  xi.py
tests/: __init__.py  test_data.py  test_lyafit.py  test_model.py  test_output.py  test_pk.py  test_vega.py  test_xi.py
vega/: __init__.py  analysis.py  broadband_poly.py  build_config.py  cli.py  coordinates.py  correlation_func.py  correlation_item.py  cosmology.py  data.py  metals.py  minimizer.py  model.py  output.py  p3d_model.py  pktoxi.py  power_spectrum.py  sampler_interface.py  (+4 more)
(+162 files in other folders)
