[bumpversion]
current_version = 1.2.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:vega/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
name = vega
version = attr: vega.__version__
author = Andrei Cuceu
author_email = andreicuceu@gmail.com
description = Package for modeling and fitting 2-point statistics for the Lyman-alpha forest.
long_description = file: README.rst
license = GNU General Public License v3.0
project_urls = 
	Bug Reports=https://github.com/andreicuceu/vega/issues
	Source=https://github.com/andreicuceu/vega
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.9
install_requires = file: requirements.txt

[options.entry_points]
console_scripts = 
	vega-run = vega.scripts.run_vega:main
    vega-run-sampler = vega.scripts.run_vega_sampler:main
    vega-run-monte-carlo = vega.scripts.run_vega_monte_carlo:main
    vega-make-template = vega.scripts.make_template:main
    vega-make-configs = vega.scripts.make_configs:main

    # For compatibility with older versions
    run_vega.py = vega.scripts.run_vega:main
    run_vega_mpi.py = vega.scripts.run_vega_sampler:run_vega_sampler

[options.extras_require]
dev = 
	pytest
	flake8
	bump2version
